# spin-trigger-mqtt

./: Cargo.toml  spin-pluginify.toml
.cargo/: audit.toml
.github/workflows/: build.yaml
tests/: integration_test.sh
